# magnus

./: .gitignore  .pre-commit-config.yaml  Anchor.toml  Cargo.toml  README.md  codama.json  package.json  rustfmt.toml
cfg/: 2k-payload.json  500-payload.json  accounts-list.json  humidifi-payload.json  raydium-cl-payload.json  raydium_cp-payload-2k.json  solfi_v2-payload.json
cfg/idls/: magnus-router.json
cfg/payloads/: humidifi-singular.json  humidifi.json  pmms.json
config/: obric-v2-payload.json  raydium-cp-payload.json  solfi-payload.json
crates/consts/: Cargo.toml
crates/consts/src/: lib.rs
crates/magnus/: Cargo.toml
crates/magnus/src/: adapters.rs  api_server.rs  args.rs  bootstrap.rs  error.rs  executor.rs  ingest.rs  lib.rs  main.rs  metrics_server.rs  solve.rs  strategy.rs
crates/magnus/src/adapters/: aggregators.rs  amms.rs  helpers.rs
crates/magnus/src/adapters/aggregators/: dflow.rs  jupiter.rs
crates/magnus/src/adapters/amms/: base_cp.rs  humidifi.rs  raydium_cl.rs  raydium_cl_v2.rs  raydium_cp.rs  swap_state.rs
crates/magnus/src/adapters/amms/obric_v2/: integration.rs  state.rs
crates/magnus/src/adapters/amms/openbook_v2/: integration.rs  state.rs
crates/magnus/src/adapters/amms/raydium_cp/: integration.rs  state.rs
crates/magnus/src/api_server/v1/: quote.rs  swap.rs
crates/magnus/src/curves/: base.rs  constant_price.rs  constant_product.rs  fees.rs  offset.rs
crates/magnus/tests/: api_server.rs
crates/router/: Cargo.toml
crates/router-client/: Cargo.toml
crates/router-client/src/: programs.rs
crates/router-client/src/instructions/: swap.rs
crates/router-client/src/types/: dex.rs  route.rs  swap_event.rs
crates/router-program/: Cargo.toml
crates/router-program/src/: constants.rs
crates/router-program/src/adapters/: mod.rs  raydium_cpmm.rs  raydium_swap.rs  solfi_v2.rs
crates/router-program/src/instructions/: mod.rs
crates/router-program/src/utils/: token.rs
crates/router/src/: constants.rs  error.rs  lib.rs
crates/router/src/adapters/: bisonfi.rs  common.rs  goonfi.rs  humidifi.rs  mod.rs  obric_v2.rs  raydium_cl_v2.rs  raydium_cp.rs  solfi_v2.rs  tessera.rs  zerofi.rs
crates/router/src/instructions/: commission_v3.rs  common_swap.rs  mod.rs  swap.rs  swap_v3.rs
crates/router/src/processor/: common_processor.rs  mod.rs  platform_fee_processor.rs  proxy_swap_processor.rs  swap_tob_processor.rs  swap_toc_processor.rs
crates/router/src/utils/: fee.rs  logging.rs  mod.rs  swap.rs  token.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
magnus/: Cargo.toml
magnus/src/: ingest.rs
magnus/src/adapters/: aggregators.rs
magnus/src/adapters/amms/: base_cp.rs  openbook_v2.rs  raydium_cp.rs
magnus/src/adapters/amms/obric_v2/: state.rs
magnus/src/curves/: base.rs
program/router/src/adapters/: raydium_clmm_v2.rs
program/router/src/instructions/: common_swap.rs
scripts/: raydium_cpamm_swap.rs  solfi_swap.rs
src/: adapters.rs  api_server.rs  args.rs  bootstrap.rs  clients.rs  curves.old.rs  curves.rs  error.rs  fees.old.rs  geyser_client.rs  helpers.rs  ingest.rs  lib.rs  main.rs  metrics_server.rs  payload.rs  solve.rs  state.rs
src/adapters/: aggregators.rs  amms.rs  helpers.rs  public.rs
src/adapters/aggregators/: dflow.rs  jupiter.rs
src/adapters/amms/: base_cl.rs  base_cp.rs  base_cpamm.rs  humidifi.rs  obric_v2.rs  raydium_cl.rs  raydium_cp.rs  raydium_cpamm.rs  swap_state.rs
src/adapters/amms/obric_v2/: integration.rs  state.rs
src/adapters/amms/raydium_cp/: integration.rs  state.rs
src/amms/: account_meta_from_token_swap.rs  amm.rs  amm_program_id_to_labels.rs  mod.rs  spl_token_swap_amm.rs
src/clients/: geyser.rs
src/curve/: base.rs
src/curves/: calculator.rs  constant_price.rs  constant_product.rs  offset.rs
src/math/: fees.rs  swap_curve_info.rs
tests/: surfpool_client.rs
