[package]
name = "magnus"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "magnus"
path = "src/main.rs"

[features]
metrics = ["dep:metrics", "metrics-exporter-prometheus"]

[dependencies]
actix-web = "4.11.0"
ahash = "0.8.12"
anchor-lang = { version = "0.31.0" }
anchor-spl = { version = "0.31.0" }
anyhow = "1.0.100"
arrayref = "0.3.9"
async-trait = "0.1.89"
# borsh = "1.5.7"
borsh = "1.6.0"
#borsh = "0.10.4"
clap = { version = "4.5.50", features = ["derive", "env", "color", "std"] }
enum_dispatch = "0.3.13"
eyre = "0.6.12"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
#litesvm = "0.8.2"
metrics = { version = "0.24.2", optional = true }
metrics-exporter-prometheus = { version = "0.17.2", optional = true }
num = "0.4.3"
num-derive = "0.4"
num-traits = "0.2"
num_cpus = "1.17.0"
#pyth-sdk = "0.8.0"
#pyth-sdk-solana = "0.10.6"
pyth-sdk = { git = "https://github.com/lbkolev/pyth-sdk-rs", package = "pyth-sdk" }
pyth-sdk-solana = { git = "https://github.com/lbkolev/pyth-sdk-rs", package = "pyth-sdk-solana" }
raydium-clmm = { git = "https://github.com/raydium-io/raydium-clmm", package = "raydium-amm-v3", features = ["no-entrypoint", "client"] }

raydium-cp-swap = { git = "https://github.com/raydium-io/raydium-cp-swap", package = "raydium-cp-swap", features = ["no-entrypoint", "client"] }

reqwest = { version = "0.12.24" }
rust_decimal = { version = "1.39.0", features = ["macros"] }
secrecy = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.0"
solana-account = "3.2.0"
solana-client = "3.0.8"
solana-commitment-config = "3.1.0"
solana-cpi = "3.0.0"
solana-instruction = "3.0.0"
solana-program = "2.0.3"
solana-sdk = "3.0.0"
solana-system-transaction = "3.0.0"
spl-associated-token-account = "8.0.0"
spl-math = "0.3.0"
spl-token = "8.0.0"
spl-token-2022 = "10.0.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tonic = { version = "0.14.2", features = ["tls-native-roots", "tls-ring"] }
tonic-health = "0.14.2"
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time"] }
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
yellowstone-grpc-client = "10.1.1"
yellowstone-grpc-proto = "10.1.1"

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.9.0"
