[workspace]
members = [
    "crates/magnus",
    "crates/consts",
    "crates/router"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.31.1"}
anchor-spl = { version = "0.31.1"}
arrayref = { version = "0.3.9" }
num_enum = { version = "0.7.2" }
solana-program = { version = "3.0.0" }
solana-sdk = { version = "3.0.0" }

[profile.release]
overflow-checks = true
