[workspace]
members = ["crates/shared", "crates/magnus", "crates/router", "crates/router-client"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.32.1" }
anchor-spl = { version = "0.32.1" }
arrayref = { version = "0.3.9" }
num_enum = { version = "0.7.2" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
