[package]
name = "magnus-router-client"
version = "0.1.0"
edition = "2021"

[lib]

[features]
serde = []

[dependencies]
solana-account-info = "3.1.0"
solana-program-error = "3.0.0"
solana-pubkey = "4.0.0"
solana-instruction = "3.0.0"
solana-cpi = "3.1.0"
borsh = "1.6.0"
num-derive = "0.4.2"
thiserror = "2.0.17"
serde = "1.0.228"
num-traits = "0.2.19"
