[package]
name = "magnus-router"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["custom-heap"]
anchor-debug = ["anchor-lang/anchor-debug"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
check-deadline = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-spl = { workspace = true }
anchor-lang = { workspace = true,  features = ["init-if-needed", "event-cpi"]}
arrayref = { workspace = true }
num_enum = { workspace = true }
solana-program = { workspace = true }
bytemuck = "^1"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]
