[package]
name = "magnus-router"
version = "0.0.1-rc"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "router"
doctest = false

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
magnus-shared = { path = "../shared" }
anchor-spl = { workspace = true }
anchor-lang = { workspace = true,  features = ["init-if-needed", "event-cpi"]}
arrayref = { workspace = true }
num_enum = { workspace = true }
base64ct = "=1.6.0"
bytemuck = "^1"
